--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMnPGmyHb4ZxqcKoHG/EYEt",
+      "authorship_tag": "ABX9TyOMESuZu8DPpRBM1O7P1e6J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,9 +31,65 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**diff**:\n",
+        "#**Examples:**\n",
         "\n",
-        "used to find differences between two files."
+        "**file1.py**\n",
+        "\n",
+        "x = 1+2\n",
+        "\n",
+        "y = 3+4\n",
+        "\n",
+        "**file2.py**\n",
+        "\n",
+        "x = 1+2\n",
+        "\n",
+        "y = 3+4\n",
+        "\n",
+        "z = 5+6"
+      ],
+      "metadata": {
+        "id": "27yXaPGVYDYl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**cat**:\n",
+        "\n",
+        "Show me the code"
+      ],
+      "metadata": {
+        "id": "TxCBhIs5XEnd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**command**\n",
+        "\n",
+        "```\n",
+        "cat file1.py\n",
+        "```\n",
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "x = 1+2\n",
+        "\n",
+        "y = 3+4\n",
+        "```\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "i7CsJCsEXOOf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**diff**:\n",
+        "\n",
+        "Used to find differences between two files."
       ],
       "metadata": {
         "id": "D67vyahkVXNS"
@@ -42,27 +98,101 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Show the difference only:\n",
+        "###Show the difference only:\n",
+        "\n",
+        "**command**\n",
         "\n",
         "```\n",
         "diff file_1.py file_2.py \n",
         "```\n",
         "\n",
-        "Show the difference with explanation:\n",
+        "output:\n",
+        "\n",
         "\n",
         "```\n",
-        "diff -u file_1.py file_2.py \n",
+        "2c2, 3\n",
+        "< y = 3+4\n",
+        "\\ No newline at end of file\n",
+        "---\n",
+        "> y = 3+4\n",
+        "> z = 5+6\n",
+        "\\ No newline at end of file\n",
         "```\n",
         "\n",
-        "export the difference to a file named difference.diff (it's preferred to use .diff):\n",
-        "\n",
-        "```\n",
-        "diff -u file_1.py file_2.py > difference.diff\n",
-        "```\n",
         "\n"
       ],
       "metadata": {
         "id": "lhMhdNkGVkta"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Show the difference with explanation \n",
+        "(compare two files, line by line, and have the differing lines compared side-by-side in the same output.)\n",
+        "\n",
+        "**command**\n",
+        "\n",
+        "```\n",
+        "diff -u file_1.py file_2.py \n",
+        "```\n",
+        "output:\n",
+        "\n",
+        "\n",
+        "```\n",
+        "--- file_1.py     2022-08-11 19:24:12.556102821 +0900\n",
+        "+++ file_1.py     2022-08-11 19:24:38.944207773 +0900\n",
+        "@@ -1,2 +1,3 @@\n",
+        " x = 1+2\n",
+        "-y = 3+4\n",
+        "\\ No newline at end of file\n",
+        "+y = 3+4\n",
+        "+z = 5+6\n",
+        "\\ No newline at end of file\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "n7ezveR5ZiKT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "###export the difference to a file named difference.diff (it's preferred to use .diff):\n",
+        "**command**\n",
+        "```\n",
+        "diff -u file_1.py file_2.py > difference.diff\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "JzHgA6RDZj9y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Patch**:\n",
+        "\n",
+        "Used for applying file differences"
+      ],
+      "metadata": {
+        "id": "1gHdOnfRXhLU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "patch file_1.py < difference.diff\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "MiloH9d3Xul7"
       }
     }
   ]
