--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMESuZu8DPpRBM1O7P1e6J",
+      "authorship_tag": "ABX9TyOiY5/y+dUkIA8ZgG94vt5/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,6 +180,17 @@
       "metadata": {
         "id": "1gHdOnfRXhLU"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "patch file_1.py < difference.diff"
+      ],
+      "metadata": {
+        "id": "Egcers56bsav"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
