--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOiY5/y+dUkIA8ZgG94vt5/",
+      "authorship_tag": "ABX9TyPvh1qBPl2GgvzeUxNDjkVH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,14 +161,22 @@
       "source": [
         "\n",
         "###export the difference to a file named difference.diff (it's preferred to use .diff):\n",
-        "**command**\n",
-        "```\n",
-        "diff -u file_1.py file_2.py > difference.diff\n",
-        "```\n"
+        "**command**"
       ],
       "metadata": {
         "id": "JzHgA6RDZj9y"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diff -u file_1.py file_2.py > difference.diff"
+      ],
+      "metadata": {
+        "id": "vdyPwfjbb5KQ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -191,20 +199,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "patch file_1.py < difference.diff\n",
-        "```\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "MiloH9d3Xul7"
-      }
     }
   ]
 }
