--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPvh1qBPl2GgvzeUxNDjkVH",
+      "authorship_tag": "ABX9TyOTvcjQMxwJhBipUOIHMxJL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,15 +131,35 @@
         "###Show the difference with explanation \n",
         "(compare two files, line by line, and have the differing lines compared side-by-side in the same output.)\n",
         "\n",
-        "**command**\n",
-        "\n",
-        "```\n",
-        "diff -u file_1.py file_2.py \n",
-        "```\n",
-        "output:\n",
-        "\n",
-        "\n",
-        "```\n",
+        "**command**\n"
+      ],
+      "metadata": {
+        "id": "n7ezveR5ZiKT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diff -u file_1.py file_2.py "
+      ],
+      "metadata": {
+        "id": "EPB6O7NqcJy2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "output"
+      ],
+      "metadata": {
+        "id": "pmBYfrCMcLOm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "--- file_1.py     2022-08-11 19:24:12.556102821 +0900\n",
         "+++ file_1.py     2022-08-11 19:24:38.944207773 +0900\n",
         "@@ -1,2 +1,3 @@\n",
@@ -148,13 +168,13 @@
         "\\ No newline at end of file\n",
         "+y = 3+4\n",
         "+z = 5+6\n",
-        "\\ No newline at end of file\n",
-        "```\n",
-        "\n"
+        "\\ No newline at end of file"
       ],
       "metadata": {
-        "id": "n7ezveR5ZiKT"
-      }
+        "id": "BKVTXKp7cJ3W"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
