--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOTvcjQMxwJhBipUOIHMxJL",
+      "authorship_tag": "ABX9TyM/QXLKFiiZb9AdOl2c0OCp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,22 +66,36 @@
       "cell_type": "markdown",
       "source": [
         "**command**\n",
-        "\n",
-        "```\n",
-        "cat file1.py\n",
-        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "i7CsJCsEXOOf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cat file1.py"
+      ],
+      "metadata": {
+        "id": "cTiu2qcFctYB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "**output:**\n",
         "```\n",
         "x = 1+2\n",
         "\n",
         "y = 3+4\n",
-        "```\n",
-        "\n",
-        "\n"
+        "```\n"
       ],
       "metadata": {
-        "id": "i7CsJCsEXOOf"
+        "id": "nerSmbyjctYL"
       }
     },
     {
@@ -101,14 +115,28 @@
         "###Show the difference only:\n",
         "\n",
         "**command**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lhMhdNkGVkta"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diff file_1.py file_2.py "
+      ],
+      "metadata": {
+        "id": "Fc3yi3IZcbl6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
-        "```\n",
-        "diff file_1.py file_2.py \n",
-        "```\n",
-        "\n",
-        "output:\n",
-        "\n",
-        "\n",
+        "**output:**\n",
         "```\n",
         "2c2, 3\n",
         "< y = 3+4\n",
@@ -117,12 +145,10 @@
         "> y = 3+4\n",
         "> z = 5+6\n",
         "\\ No newline at end of file\n",
-        "```\n",
-        "\n",
-        "\n"
+        "```\n"
       ],
       "metadata": {
-        "id": "lhMhdNkGVkta"
+        "id": "Imgbts1jdCl7"
       }
     },
     {
@@ -151,7 +177,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "output"
+        "**output**"
       ],
       "metadata": {
         "id": "pmBYfrCMcLOm"
@@ -203,7 +229,9 @@
       "source": [
         "##**Patch**:\n",
         "\n",
-        "Used for applying file differences"
+        "Used for applying file differences\n",
+        "\n",
+        "**command**"
       ],
       "metadata": {
         "id": "1gHdOnfRXhLU"
