--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/QXLKFiiZb9AdOl2c0OCp",
+      "authorship_tag": "ABX9TyMdaS3LgnVBjdAQlTifUI1N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,15 +177,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**output**"
-      ],
-      "metadata": {
-        "id": "pmBYfrCMcLOm"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
         "--- file_1.py     2022-08-11 19:24:12.556102821 +0900\n",
         "+++ file_1.py     2022-08-11 19:24:38.944207773 +0900\n",
         "@@ -1,2 +1,3 @@\n",
@@ -194,19 +188,18 @@
         "\\ No newline at end of file\n",
         "+y = 3+4\n",
         "+z = 5+6\n",
-        "\\ No newline at end of file"
+        "\\ No newline at end of file\n",
+        "```\n"
       ],
       "metadata": {
-        "id": "BKVTXKp7cJ3W"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "NLzhHkeedPsZ"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
         "\n",
-        "###export the difference to a file named difference.diff (it's preferred to use .diff):\n",
+        "###Export the difference to a file named difference.diff (it's preferred to use .diff):\n",
         "**command**"
       ],
       "metadata": {
