--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMdaS3LgnVBjdAQlTifUI1N",
+      "authorship_tag": "ABX9TyOZaITEIkJyBPIzGup0QTqA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -220,7 +220,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Patch**:\n",
+        "#**Patch**:\n",
         "\n",
         "Used for applying file differences\n",
         "\n",
@@ -240,6 +240,20 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "patching file file_1.py\n",
+        "Hunk #1 succeeded at 1 with fuzz1.\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "KSvn3Werd0H5"
+      }
     }
   ]
 }
