--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZaITEIkJyBPIzGup0QTqA",
+      "authorship_tag": "ABX9TyNI+RPwPyqHWs1mxuldDRaW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,6 +253,128 @@
       ],
       "metadata": {
         "id": "KSvn3Werd0H5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**git init**:\n",
+        "\n",
+        "Used for initializing an empty Git repoaitory\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "mshbhqxTH8KQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mkdir checks\n",
+        "cd checks\n",
+        "git init"
+      ],
+      "metadata": {
+        "id": "Xin0xZwEH8KR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "initialized empty Git repoaitory in C:/Users/Guest/Desktop/checks/.git/\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "5CVCvIvEH8KR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can check that this directory (.git) exist using this: \n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "tiTq2x1hJA2I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls -la"
+      ],
+      "metadata": {
+        "id": "F7SAkXF2JLs3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "total 32\n",
+        "drwxr-xr-x 1 Guest 197212 0 Aug 13 04:50 ./\n",
+        "drwxr-xr-x 1 Guest 197212 0 Aug 13 04:50 ../\n",
+        "drwxr-xr-x 1 Guest 197212 0 Aug 13 04:50 .git/\n",
+        "\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "9_ZN0nCQJSD1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can also use the ls-l.git command to look inside of it and see the many different things it contains\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "nNRGjR6fJvq_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls-l.git"
+      ],
+      "metadata": {
+        "id": "JF1gVK2wJzoH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "total 11\n",
+        "drwxr-xr-x 1 Guest 197212   0 Aug 13 04:50 ./\n",
+        "drwxr-xr-x 1 Guest 197212   0 Aug 13 04:50 ../\n",
+        "-rw-r--r-- 1 Guest 197212 130 Aug 13 04:50 config\n",
+        "-rw-r--r-- 1 Guest 197212  73 Aug 13 04:50 description\n",
+        "-rw-r--r-- 1 Guest 197212  23 Aug 13 04:50 HEAD\n",
+        "drwxr-xr-x 1 Guest 197212   0 Aug 13 04:50 hooks/\n",
+        "drwxr-xr-x 1 Guest 197212   0 Aug 13 04:50 info/\n",
+        "drwxr-xr-x 1 Guest 197212   0 Aug 13 04:50 objects/\n",
+        "drwxr-xr-x 1 Guest 197212   0 Aug 13 04:50 refs/\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "4M6nh5sAJ6f7"
       }
     }
   ]
