--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNI+RPwPyqHWs1mxuldDRaW",
+      "authorship_tag": "ABX9TyMspuyCei7ooUog1w41oCZi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,7 +260,7 @@
       "source": [
         "#**git init**:\n",
         "\n",
-        "Used for initializing an empty Git repoaitory\n",
+        "Used for initializing an empty Git repository\n",
         "\n",
         "**command**"
       ],
@@ -375,6 +375,63 @@
       ],
       "metadata": {
         "id": "4M6nh5sAJ6f7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Copy a file into the repository**:\n",
+        "\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "m22rYkxoLzsI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cp ../file_1.py .       # Dont forget the dot after the file name"
+      ],
+      "metadata": {
+        "id": "0trMYFRLLzsQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now lets check that it was copied"
+      ],
+      "metadata": {
+        "id": "rBw9n0gYMW3q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls -l"
+      ],
+      "metadata": {
+        "id": "iXllUPRDMsiM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "total 1\n",
+        "-rw-r--r-- 1 Guest 197212 16 Aug 13 04:50 file_1.py\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "EVWpxK8XMxlZ"
       }
     }
   ]
