--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMspuyCei7ooUog1w41oCZi",
+      "authorship_tag": "ABX9TyPWeP1SdOuXY8tZpDlAkxWX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -432,6 +432,47 @@
       ],
       "metadata": {
         "id": "EVWpxK8XMxlZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**make Git track the file**\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "bcuCqpSdNmgI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git add file_1.py"
+      ],
+      "metadata": {
+        "id": "d9iNnyweNuHP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "On branch master\n",
+        "\n",
+        "No commits yet\n",
+        "\n",
+        "Changes to be commited:\n",
+        "  <use \"git rm --cached <file>...\" to unstage>\n",
+        "        new file:   File_1.py\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "NeWemiRmPDSb"
       }
     }
   ]
