--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWeP1SdOuXY8tZpDlAkxWX",
+      "authorship_tag": "ABX9TyM1nQJGcJ6Y4DP1sXd3Fhnu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -474,6 +474,30 @@
       "metadata": {
         "id": "NeWemiRmPDSb"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Get the changes committed into the .git directory**\n",
+        "for more dtails:\n",
+        "https://git-scm.com/docs/git-commit\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "at8BkSTdQZfQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git commit"
+      ],
+      "metadata": {
+        "id": "lf2-xXBoQZfR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
