--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM1nQJGcJ6Y4DP1sXd3Fhnu",
+      "authorship_tag": "ABX9TyOj7jlOmmzOKAhmUn61wAS3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -498,6 +498,77 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Open atom from git to modify the code**\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "cWfGb-B-Yvvj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "atom file_1.py"
+      ],
+      "metadata": {
+        "id": "0ijI57WXYvvk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "now lets check the state of the working directory and the staging area"
+      ],
+      "metadata": {
+        "id": "YC0FSoZcZ5Os"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**git status**\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "rsPBVI2BaEIY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git status"
+      ],
+      "metadata": {
+        "id": "h5-eg4R4aEIg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "On branch master\n",
+        "Changes not staged for commit:\n",
+        "  <use \"git add <file>...\" to update what will be committed>\n",
+        "  <use \"git restore -- <file>...\" to discard changes in working directory>\n",
+        "        modified:     File_1.py\n",
+        "\n",
+        "no changes added to commit <use \"gi add\" and/or \"git commit -a\">\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "vOg82jfJaEIg"
+      }
     }
   ]
 }
