--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOj7jlOmmzOKAhmUn61wAS3",
+      "authorship_tag": "ABX9TyP0C/bCZIcCAHLc5AQhKE/S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -561,13 +561,74 @@
         "Changes not staged for commit:\n",
         "  <use \"git add <file>...\" to update what will be committed>\n",
         "  <use \"git restore -- <file>...\" to discard changes in working directory>\n",
-        "        modified:     File_1.py\n",
+        "        modified:     file_1.py\n",
         "\n",
         "no changes added to commit <use \"gi add\" and/or \"git commit -a\">\n",
         "```\n"
       ],
       "metadata": {
         "id": "vOg82jfJaEIg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**git add**\n",
+        "adds the change in the working directory to the staging area\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "FKl_vQTpk6Qu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git add file_1.py"
+      ],
+      "metadata": {
+        "id": "uIhJfsw9k6Q1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "now lets check the state of the working directory and the staging area again\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "12UgU-BNlmpE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git status"
+      ],
+      "metadata": {
+        "id": "Pl4jXqTllrze"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "On branch master\n",
+        "Changes to be commited:\n",
+        "  <use \"git restore --staged <file>...\" to unstage>        \n",
+        "        modified:     file_1.py\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "auKo6aU8k6Q2"
       }
     }
   ]
