--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP0C/bCZIcCAHLc5AQhKE/S",
+      "authorship_tag": "ABX9TyMaDnbOooOimG5AJHijvzV1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -629,6 +629,43 @@
       ],
       "metadata": {
         "id": "auKo6aU8k6Q2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**git commit -m**\n",
+        "include a message\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "IPm8Cl2InCuJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git commit -m \"added a new line\""
+      ],
+      "metadata": {
+        "id": "INBsEytdnCuK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "[master cfb5c4u] added a new line\n",
+        " 1 file changed, 2 insertions(+), 1 deletion(-)\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "oqQCNPkZnp6g"
       }
     }
   ]
