--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/GvKzyyNMlKOVDEEBfG/z",
+      "authorship_tag": "ABX9TyOazqds8CCTRnA+ajf1e/Q5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -542,6 +542,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "now lets check the state of the working directory and the staging area again\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "6cGoMCdObvCf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git status"
+      ],
+      "metadata": {
+        "id": "bN_jYNdRbvCg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "**output:**\n",
         "```\n",
@@ -785,6 +807,44 @@
       ],
       "metadata": {
         "id": "eS89RqhnoehO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**git commit -a -m**\n",
+        "Skipping the Staging Area (ship git add then get commiit every time)\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "hoTlEYFocWBm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git commit -a -m \"added a new line\""
+      ],
+      "metadata": {
+        "id": "NTGSaC4wcWBn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "[master <root-commit> cfb5c4u] added a new line\n",
+        " 1 file changed, 3 insertions(+)\n",
+        " create mode 100644 file_1.py\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "DavR6rDHcWBn"
       }
     }
   ]
