--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOazqds8CCTRnA+ajf1e/Q5",
+      "authorship_tag": "ABX9TyNiv9alKTCFrwtAHXJT9JpL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -814,6 +814,8 @@
       "source": [
         "#**git commit -a -m**\n",
         "Skipping the Staging Area (ship git add then get commiit every time)\n",
+        "\n",
+        "$Note$: It's usually used for small changes\n",
         "\n",
         "**command**"
       ],
