--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNiv9alKTCFrwtAHXJT9JpL",
+      "authorship_tag": "ABX9TyNi6R4+N63AaZvArPxhw7A9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -847,6 +847,97 @@
       ],
       "metadata": {
         "id": "DavR6rDHcWBn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**git log**\n",
+        "Show the history of changes (file time line)\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "CKzDtLSAdn9E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git log"
+      ],
+      "metadata": {
+        "id": "85RhqBvWdn9M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "commit 43433c674e3d6c86a889fad222dae179785893cf (HEAD -> master)\n",
+        "Author: Yahia_ML <Yahia_ML@example.com>\n",
+        "Date:   sat Aug 13 13:09:58 2022 +0200\n",
+        "\n",
+        "   added a new line\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "KWcXt0eBdn9M"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**git log -p**\n",
+        "Shows the past commits which helps to see who did what in Git and the repository\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "3KBQb7r1fTRB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git log -p"
+      ],
+      "metadata": {
+        "id": "Yle4XMRNfTRJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "commit 43433c674e3d6c86a889fad222dae179785893cf (HEAD -> master)\n",
+        "Author: Yahia_ML <Yahia_ML@example.com>\n",
+        "Date:   sat Aug 13 13:09:58 2022 +0200\n",
+        "\n",
+        "   added a new line\n",
+        "   \n",
+        "diff --git a/file_1.py b/file_1.py\n",
+        "new file mode 100644\n",
+        "index f45673f..2d2701d \n",
+        "\n",
+        "--- /dev/null\n",
+        "+++ b/file_1.py\n",
+        "@@ 0,0 +1,3 @@\n",
+        "+x = 1+2\n",
+        "+y = 3+4\n",
+        "+z = 5+6\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "3h7hpXF4fTRJ"
       }
     }
   ]
