--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNi6R4+N63AaZvArPxhw7A9",
+      "authorship_tag": "ABX9TyMxcgcvc74ualHECy//2Lej",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,38 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/YahiaML/Git-manual/blob/main/Git_manual.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "| Command| Coursera Explanation| My explaination |\n",
+        "|-|-|-|\n",
+        "|[cat](#cat)| --- | Show me the code|\n",
+        "|[diff](#diff)| used to find differences between two files | ---|\n",
+        "|[diff -u](#diff_u)| compare two files, line by line, and have the differing lines compared side-by-side in the same output |---|\n",
+        "|[patch](#patch)| useful for applying file differences | ---|\n",
+        "|[git commit -a](#git_commit_a)| Stages files automatically | Skipping the Staging Area (skip git add then get commiit every time)|\n",
+        "| [git log](#git_log) |     ---     | Show the history of changes (file time line)|\n",
+        "| [git log -p](#git_log_p) |     Produces patch text     | Show the history of changes (file time line) with details|\n",
+        "| [git log show](#git_log_show) | Shows various objects  | Show the history of a specific change through its ID|\n",
+        "| [git diff](#git_diff)|  Is similar to the Linux `diff` command, and can show the differences in various commits |\n",
+        "| [git diff --staged](#git_diff_staged) |  An alias to --cached, this will show all staged files compared to the named commit |\n",
+        "|  [git add -p](#git_add_p)|  Allows a user to interactively review patches to add to the current commit |\n",
+        "| [git mv](#git_mv) |  Similar to the Linux `mv` command, this moves a file |\n",
+        "| [git rm](#git_rm) |  Similar to the Linux `rm` command, this deletes, or removes a file |\n",
+        "\n",
+        "\n",
+        "**sources**: \n",
+        "\n",
+        "https://www.coursera.org/learn/introduction-git-github/supplement/cKIs3/diff-and-patch-cheat-sheet\n",
+        "\n",
+        "https://www.coursera.org/learn/introduction-git-github/supplement/39ZMi/advanced-git-cheat-sheet\n"
+      ],
+      "metadata": {
+        "id": "NY6LMAXcI8pd"
+      }
     },
     {
       "cell_type": "markdown",
@@ -54,7 +86,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**cat**:\n",
+        "#**cat**: <a name=\"cat\">\n",
         "\n",
         "Show me the code"
       ],
@@ -101,7 +133,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**diff**:\n",
+        "#**diff**: <a name=\"diff\">\n",
         "\n",
         "Used to find differences between two files."
       ],
@@ -154,7 +186,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Show the difference with explanation \n",
+        "#**diff -u** <a name=\"diff_u\">\n",
         "(compare two files, line by line, and have the differing lines compared side-by-side in the same output.)\n",
         "\n",
         "**command**\n"
@@ -220,7 +252,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Patch**:\n",
+        "#**Patch**: <a name=\"patch\">\n",
         "\n",
         "Used for applying file differences\n",
         "\n",
@@ -812,8 +844,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**git commit -a -m**\n",
-        "Skipping the Staging Area (ship git add then get commiit every time)\n",
+        "#**git commit -a -m** <a name=\"git_commit_a\">\n",
+        "Skipping the Staging Area (skip git add then get commiit every time)\n",
         "\n",
         "$Note$: It's usually used for small changes\n",
         "\n",
@@ -852,7 +884,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**git log**\n",
+        "#**git log** <a name=\"git_log\">\n",
         "Show the history of changes (file time line)\n",
         "\n",
         "**command**"
@@ -892,8 +924,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**git log -p**\n",
-        "Shows the past commits which helps to see who did what in Git and the repository\n",
+        "#**git log -p** <a name=\"git_log_p\">\n",
+        "Show the history of changes (file time line) with details\n",
+        "\n",
         "\n",
         "**command**"
       ],
@@ -938,6 +971,74 @@
       ],
       "metadata": {
         "id": "3h7hpXF4fTRJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**git log show** <a name=\"git_log_show\">\n",
+        "Show the history of a specific change through its ID\n",
+        "\n",
+        "For more git log filters, you can check: \n",
+        "\n",
+        "1. https://careerkarma.com/blog/git-log/#:~:text=The%20git%20log%20command%20shows,the%20history%20of%20a%20repository.\n",
+        "\n",
+        "2. https://www.toolsqa.com/git/git-log/#:~:text=Git%20log%20is%20a%20very,more%20in%20the%20Git%20log.\n",
+        "\n",
+        "**command**"
+      ],
+      "metadata": {
+        "id": "PjLWWoZIhIhF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git log show 43433c674e3d6c86a889fad222dae179785893cf"
+      ],
+      "metadata": {
+        "id": "J5xi3za5hIhG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**output:**\n",
+        "```\n",
+        "commit 43433c674e3d6c86a889fad222dae179785893cf\n",
+        "Author: Yahia_ML <Yahia_ML@example.com>\n",
+        "Date:   sat Aug 13 13:09:58 2022 +0200\n",
+        "\n",
+        "   added a new line\n",
+        "   \n",
+        "diff --git a/file_1.py b/file_1.py\n",
+        "new file mode 100644\n",
+        "index f45673f..2d2701d \n",
+        "\n",
+        "--- /dev/null\n",
+        "+++ b/file_1.py\n",
+        "@@ 0,0 +1,3 @@\n",
+        "+x = 1+2\n",
+        "+y = 3+4\n",
+        "+z = 5+6\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "NTGGyH8YhIhG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For more details\n",
+        "\n",
+        "https://www.coursera.org/learn/introduction-git-github/supplement/39ZMi/advanced-git-cheat-sheet"
+      ],
+      "metadata": {
+        "id": "U3X5dmtiHSvz"
       }
     }
   ]
