--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMxcgcvc74ualHECy//2Lej",
+      "authorship_tag": "ABX9TyOS95xyXqjUP/itVKyW39cd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,11 +43,11 @@
         "| [git log](#git_log) |     ---     | Show the history of changes (file time line)|\n",
         "| [git log -p](#git_log_p) |     Produces patch text     | Show the history of changes (file time line) with details|\n",
         "| [git log show](#git_log_show) | Shows various objects  | Show the history of a specific change through its ID|\n",
-        "| [git diff](#git_diff)|  Is similar to the Linux `diff` command, and can show the differences in various commits |\n",
-        "| [git diff --staged](#git_diff_staged) |  An alias to --cached, this will show all staged files compared to the named commit |\n",
-        "|  [git add -p](#git_add_p)|  Allows a user to interactively review patches to add to the current commit |\n",
-        "| [git mv](#git_mv) |  Similar to the Linux `mv` command, this moves a file |\n",
-        "| [git rm](#git_rm) |  Similar to the Linux `rm` command, this deletes, or removes a file |\n",
+        "| [git diff](#git_diff)|  Is similar to the Linux `diff` command, and can show the differences in various commits |---|\n",
+        "| [git diff --staged](#git_diff_staged) |  An alias to --cached, this will show all staged files compared to the named commit |---|\n",
+        "|  [git add -p](#git_add_p)|  Allows a user to interactively review patches to add to the current commit |---|\n",
+        "| [git mv](#git_mv) |  Similar to the Linux `mv` command, this moves a file |---|\n",
+        "| [git rm](#git_rm) |  Similar to the Linux `rm` command, this deletes, or removes a file |---|\n",
         "\n",
         "\n",
         "**sources**: \n",
