--- a/Git_manual.ipynb
+++ b/Git_manual.ipynb
@@ -6,7 +6,7 @@
       "name": "Git-manual.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOS95xyXqjUP/itVKyW39cd",
+      "authorship_tag": "ABX9TyNKbD3ego3HsJonw72dRK5P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
+        "#Summary and table of contents \n",
         "\n",
         "| Command| Coursera Explanation| My explaination |\n",
         "|-|-|-|\n",
